--- a/vibe-one/.gitignore
+++ b/vibe-one/.gitignore
@@ -8,7 +8,38 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# Production & Build info
+build/
+dist/
+dist-ssr/
+release/
+win-unpacked/
+linux-unpacked/
+mac-unpacked/
+
+# Electron Artifacts
+*.exe
+*.msi
+*.app
+*.dmg
+*.rpm
+*.deb
+*.AppImage
+*.snap
+*.zip
+*.tar.gz
+*.tgz
+*.rar
+*.7z
+*.asar
+*.dll
+*.so
+*.dylib
+
+# Others
+key.pem
+cert.pem
+sidecar/
 dist-ssr
 *.local
 
@@ -22,9 +53,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-node_modules
-apps/dashboard/release/
-*.exe
-*.msi
-sidecar/
